--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <script type="module" src="src/Main.js"></script>
+    <script type="module" src="./src/Main.js"></script>
 </body>
 
 </html>
